--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ __pycache__/
 # C extensions
 *.so
 
+
 # Distribution / packaging
 .Python
 build/
@@ -120,6 +121,8 @@ celerybeat.pid
 *.sage.py
 
 # Environments
+
+.artifacts
 .env
 .venv
 env/
